// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Import Profile - Processing import should enter password again 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
    data-testid="ProcessingImport"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Profile
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          The file with name export is being imported.
        </div>
      </div>
    </div>
    <div
      class="text-theme-secondary-text"
    >
      Please wait...
    </div>
    <div
      class="mt-8"
    >
      <div
        class="p-4 rounded-lg border-2 border-theme-secondary-200 dark:border-theme-secondary-800"
      >
        <div
          class="flex justify-between items-center space-x-4"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="sc-bdvvtL kCgesw"
              height="40"
              width="40"
            >
              <svg>
                extension-dwe.svg
              </svg>
            </div>
            <div
              class="font-semibold"
            >
              <span
                class="TruncateMiddle__Wrapper-sc-ue8va6-0"
                data-testid="TruncateMiddle"
              >
                export
              </span>
            </div>
          </div>
          <div
            class="Spinner-sc-1rpx65r-0 lfdpzU"
            color="info"
          />
        </div>
      </div>
    </div>
    <div
      class="text-left items-left"
    >
      <div
        class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
        data-testid="modal__overlay"
      >
        <div
          class="Modal__ModalContainer-sc-5lu2mc-0 fVxcFR"
          tabindex="-1"
        >
          <div
            class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
            data-testid="modal__inner"
          >
            <div
              class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF w-11 h-11"
                data-testid="modal__close-btn"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="sc-bdvvtL fCrhkg"
                    height="16"
                    width="16"
                  >
                    <svg>
                      cross.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="relative space-y-4"
            >
              <h2
                class="mb-0 text-2xl font-bold items-left"
              >
                Profile Password
              </h2>
              <div
                class="flex-1"
              >
                <div
                  class="whitespace-pre-line text-theme-secondary-text"
                >
                  The profile you are importing contains a password that has been set for security purposes. Enter the password to confirm.
                </div>
                <form
                  class="mt-8"
                  data-testid="Form"
                >
                  <fieldset
                    class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
                  >
                    <label
                      class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                      data-testid="FormLabel"
                      for="password"
                    >
                      Password
                    </label>
                    <div
                      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
                    >
                      <div
                        class="relative flex flex-1 h-full"
                      >
                        <input
                          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                          data-testid="PasswordModal__input"
                          name="password"
                          type="password"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <div
                          class=""
                        >
                          <button
                            class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none ring-focus"
                            data-ring-focus-margin="-m-1"
                            data-testid="InputPassword__toggle"
                            type="button"
                          >
                            <div
                              class="sc-bdvvtL qGXhc"
                              height="20"
                              width="20"
                            >
                              <svg>
                                eye.svg
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                  <div
                    class="flex justify-end mt-8 space-x-3"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 isLyLB"
                      data-testid="PasswordModal__submit-button"
                      type="submit"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Confirm
                      </div>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Import Profile - Processing import should handle import error 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
    data-testid="ProcessingImport"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Profile
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          The file with name test.dwe is being imported.
        </div>
      </div>
    </div>
    <div
      class="text-theme-secondary-text"
    >
      Please wait...
    </div>
    <div
      class="mt-8"
    >
      <div
        class="p-4 rounded-lg border-2 border-theme-secondary-200 dark:border-theme-secondary-800"
      >
        <div
          class="flex justify-between items-center space-x-4"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="sc-bdvvtL kCgesw"
              height="40"
              width="40"
            >
              <svg>
                extension-dwe.svg
              </svg>
            </div>
            <div
              class="font-semibold"
            >
              <span
                class="TruncateMiddle__Wrapper-sc-ue8va6-0"
                data-testid="TruncateMiddle"
              >
                test.dwe
              </span>
            </div>
          </div>
          <div
            class="Spinner-sc-1rpx65r-0 lfdpzU"
            color="info"
          />
        </div>
      </div>
    </div>
    <div
      class="text-left items-left"
    />
  </div>
</div>
`;

exports[`Import Profile - Processing import should handle invalid password 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
    data-testid="ProcessingImport"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Profile
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          The file with name export is being imported.
        </div>
      </div>
    </div>
    <div
      class="text-theme-secondary-text"
    >
      Please wait...
    </div>
    <div
      class="mt-8"
    >
      <div
        class="p-4 rounded-lg border-2 border-theme-secondary-200 dark:border-theme-secondary-800"
      >
        <div
          class="flex justify-between items-center space-x-4"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="sc-bdvvtL kCgesw"
              height="40"
              width="40"
            >
              <svg>
                extension-dwe.svg
              </svg>
            </div>
            <div
              class="font-semibold"
            >
              <span
                class="TruncateMiddle__Wrapper-sc-ue8va6-0"
                data-testid="TruncateMiddle"
              >
                export
              </span>
            </div>
          </div>
          <div
            class="Spinner-sc-1rpx65r-0 lfdpzU"
            color="info"
          />
        </div>
      </div>
    </div>
    <div
      class="text-left items-left"
    >
      <div
        class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
        data-testid="modal__overlay"
      >
        <div
          class="Modal__ModalContainer-sc-5lu2mc-0 fVxcFR"
          tabindex="-1"
        >
          <div
            class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
            data-testid="modal__inner"
          >
            <div
              class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF w-11 h-11"
                data-testid="modal__close-btn"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="sc-bdvvtL fCrhkg"
                    height="16"
                    width="16"
                  >
                    <svg>
                      cross.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="relative space-y-4"
            >
              <h2
                class="mb-0 text-2xl font-bold items-left"
              >
                Profile Password
              </h2>
              <div
                class="flex-1"
              >
                <div
                  class="whitespace-pre-line text-theme-secondary-text"
                >
                  The profile you are importing contains a password that has been set for security purposes. Enter the password to confirm.
                </div>
                <form
                  class="mt-8"
                  data-testid="Form"
                >
                  <fieldset
                    class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
                  >
                    <label
                      class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                      data-testid="FormLabel"
                      for="password"
                    >
                      Password
                    </label>
                    <div
                      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
                    >
                      <div
                        class="relative flex flex-1 h-full"
                      >
                        <input
                          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                          data-testid="PasswordModal__input"
                          name="password"
                          type="password"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <div
                          class=""
                        >
                          <button
                            class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none ring-focus"
                            data-ring-focus-margin="-m-1"
                            data-testid="InputPassword__toggle"
                            type="button"
                          >
                            <div
                              class="sc-bdvvtL qGXhc"
                              height="20"
                              width="20"
                            >
                              <svg>
                                eye.svg
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                  <div
                    class="flex justify-end mt-8 space-x-3"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 isLyLB"
                      data-testid="PasswordModal__submit-button"
                      type="submit"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Confirm
                      </div>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Import Profile - Processing import should not run import process if file is not provided 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
    data-testid="ProcessingImport"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Profile
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          The file with name  is being imported.
        </div>
      </div>
    </div>
    <div
      class="text-theme-secondary-text"
    >
      Please wait...
    </div>
    <div
      class="mt-8"
    />
    <div
      class="text-left items-left"
    />
  </div>
</div>
`;

exports[`Import Profile - Processing import should require password for password-protected profile import 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
    data-testid="ProcessingImport"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Profile
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          The file with name export is being imported.
        </div>
      </div>
    </div>
    <div
      class="text-theme-secondary-text"
    >
      Please wait...
    </div>
    <div
      class="mt-8"
    >
      <div
        class="p-4 rounded-lg border-2 border-theme-secondary-200 dark:border-theme-secondary-800"
      >
        <div
          class="flex justify-between items-center space-x-4"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="sc-bdvvtL kCgesw"
              height="40"
              width="40"
            >
              <svg>
                extension-dwe.svg
              </svg>
            </div>
            <div
              class="font-semibold"
            >
              <span
                class="TruncateMiddle__Wrapper-sc-ue8va6-0"
                data-testid="TruncateMiddle"
              >
                export
              </span>
            </div>
          </div>
          <div
            class="Spinner-sc-1rpx65r-0 lfdpzU"
            color="info"
          />
        </div>
      </div>
    </div>
    <div
      class="text-left items-left"
    >
      <div
        class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
        data-testid="modal__overlay"
      >
        <div
          class="Modal__ModalContainer-sc-5lu2mc-0 fVxcFR"
          tabindex="-1"
        >
          <div
            class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
            data-testid="modal__inner"
          >
            <div
              class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF w-11 h-11"
                data-testid="modal__close-btn"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="sc-bdvvtL fCrhkg"
                    height="16"
                    width="16"
                  >
                    <svg>
                      cross.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="relative space-y-4"
            >
              <h2
                class="mb-0 text-2xl font-bold items-left"
              >
                Profile Password
              </h2>
              <div
                class="flex-1"
              >
                <div
                  class="whitespace-pre-line text-theme-secondary-text"
                >
                  The profile you are importing contains a password that has been set for security purposes. Enter the password to confirm.
                </div>
                <form
                  class="mt-8"
                  data-testid="Form"
                >
                  <fieldset
                    class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
                  >
                    <label
                      class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                      data-testid="FormLabel"
                      for="password"
                    >
                      Password
                    </label>
                    <div
                      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
                    >
                      <div
                        class="relative flex flex-1 h-full"
                      >
                        <input
                          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                          data-testid="PasswordModal__input"
                          name="password"
                          type="password"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <div
                          class=""
                        >
                          <button
                            class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none ring-focus"
                            data-ring-focus-margin="-m-1"
                            data-testid="InputPassword__toggle"
                            type="button"
                          >
                            <div
                              class="sc-bdvvtL qGXhc"
                              height="20"
                              width="20"
                            >
                              <svg>
                                eye.svg
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                  <div
                    class="flex justify-end mt-8 space-x-3"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 isLyLB"
                      data-testid="PasswordModal__submit-button"
                      type="submit"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Confirm
                      </div>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Import Profile - Processing import should show error if json import has an error 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
    data-testid="ProcessingImport"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Profile
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          The file with name export is being imported.
        </div>
      </div>
    </div>
    <div
      class="text-theme-secondary-text"
    >
      Please wait...
    </div>
    <div
      class="mt-8"
    >
      <div
        class="p-4 rounded-lg border-2 border-theme-secondary-200 dark:border-theme-secondary-800"
      >
        <div
          class="flex justify-between items-center space-x-4"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="sc-bdvvtL kCgesw"
              height="40"
              width="40"
            >
              <svg>
                extension-json.svg
              </svg>
            </div>
            <div
              class="font-semibold"
            >
              <span
                class="TruncateMiddle__Wrapper-sc-ue8va6-0"
                data-testid="TruncateMiddle"
              >
                export
              </span>
            </div>
          </div>
          <div
            class="Spinner-sc-1rpx65r-0 lfdpzU"
            color="info"
          />
        </div>
      </div>
    </div>
    <div
      class="text-left items-left"
    />
  </div>
</div>
`;

exports[`Import Profile - Processing import should successfully import dwe profile 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
    data-testid="ProcessingImport"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Profile
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          The file with name profile.dwe is being imported.
        </div>
      </div>
    </div>
    <div
      class="text-theme-secondary-text"
    >
      Please wait...
    </div>
    <div
      class="mt-8"
    >
      <div
        class="p-4 rounded-lg border-2 border-theme-secondary-200 dark:border-theme-secondary-800"
      >
        <div
          class="flex justify-between items-center space-x-4"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="sc-bdvvtL kCgesw"
              height="40"
              width="40"
            >
              <svg>
                extension-dwe.svg
              </svg>
            </div>
            <div
              class="font-semibold"
            >
              <span
                class="TruncateMiddle__Wrapper-sc-ue8va6-0"
                data-testid="TruncateMiddle"
              >
                profile.dwe
              </span>
            </div>
          </div>
          <div
            class="Spinner-sc-1rpx65r-0 lfdpzU"
            color="info"
          />
        </div>
      </div>
    </div>
    <div
      class="text-left items-left"
    />
  </div>
</div>
`;

exports[`Import Profile - Processing import should successfully import json profile 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
    data-testid="ProcessingImport"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Profile
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          The file with name export is being imported.
        </div>
      </div>
    </div>
    <div
      class="text-theme-secondary-text"
    >
      Please wait...
    </div>
    <div
      class="mt-8"
    >
      <div
        class="p-4 rounded-lg border-2 border-theme-secondary-200 dark:border-theme-secondary-800"
      >
        <div
          class="flex justify-between items-center space-x-4"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="sc-bdvvtL kCgesw"
              height="40"
              width="40"
            >
              <svg>
                extension-json.svg
              </svg>
            </div>
            <div
              class="font-semibold"
            >
              <span
                class="TruncateMiddle__Wrapper-sc-ue8va6-0"
                data-testid="TruncateMiddle"
              >
                export
              </span>
            </div>
          </div>
          <div
            class="Spinner-sc-1rpx65r-0 lfdpzU"
            color="info"
          />
        </div>
      </div>
    </div>
    <div
      class="text-left items-left"
    />
  </div>
</div>
`;
